[metadata]
name = logstreamer
author = Andrew Grigorev
author-email = andrew@ei-grad.ru
summary = Library to stream log files contents
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://pypi.python.org/pypi/logstreamer
project_urls =
    Bug Tracker = https://github.com/ei-grad/python-logstreamer/issues
    Documentation = https://logstreamer.readthedocs.io
    Source Code = https://github.com/ei-grad/python-logstreamer
license = MIT
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: Linux
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    logstreamer
